<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add.AddFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/street_box"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/street"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_street"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLength="25" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cost_box"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_cost"
                    android:inputType="numberDecimal"
                    android:lines="1"
                    android:maxLength="8" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/details_box"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_details"
                    android:inputType="textMultiLine"
                    android:maxLength="250" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_box"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_phone"
                    android:inputType="phone"
                    android:lines="1"
                    android:maxLength="12" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginVertical="@dimen/activity_vertical_margin" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:gravity="center"
                android:text="Add up to 4 images" />

            <Button
                android:id="@+id/add_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:text="Add image" />

            <androidx.gridlayout.widget.GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:columnCount="2"
                app:rowCount="2">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="240dp"
                    app:cardElevation="20dp"
                    app:cardUseCompatPadding="true"
                    app:layout_columnWeight="1"
                    app:layout_rowWeight="1">

                    <ImageView
                        android:id="@+id/Image1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:visibility="invisible"
                        app:srcCompat="@drawable/ic_add_photo" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="240dp"
                    app:cardElevation="20dp"
                    app:cardUseCompatPadding="true"
                    app:layout_columnWeight="1"
                    app:layout_rowWeight="1">

                    <ImageView
                        android:id="@+id/Image2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:visibility="invisible"
                        app:srcCompat="@drawable/ic_add_photo" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="240dp"
                    app:cardElevation="20dp"
                    app:cardUseCompatPadding="true"
                    app:layout_columnWeight="1"
                    app:layout_rowWeight="1">

                    <ImageView
                        android:id="@+id/Image3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:visibility="invisible"
                        app:srcCompat="@drawable/ic_add_photo" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="240dp"
                    app:cardElevation="20dp"
                    app:cardUseCompatPadding="true"
                    app:layout_columnWeight="1"
                    app:layout_rowWeight="1">

                    <ImageView
                        android:id="@+id/Image4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:visibility="invisible"
                        app:srcCompat="@drawable/ic_add_photo" />
                </androidx.cardview.widget.CardView>
            </androidx.gridlayout.widget.GridLayout>

            <Button
                android:id="@+id/upload_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:backgroundTint="@color/black"
                android:text="Upload images" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginVertical="@dimen/activity_vertical_margin" />


            <Button
                android:id="@+id/location_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:backgroundTint="@color/black"
                android:text="@string/create_location" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginVertical="@dimen/activity_vertical_margin" />

            <Button
                android:id="@+id/add_button"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:text="@string/create_add" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>